--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "frisklog",
     "version": "1.0.0",
     "license": "MIT",
+    "homepage": "http://donghoon4907.github.io/frisklog-with-razzle",
     "scripts": {
         "dev": "razzle start",
         "build": "razzle build",
@@ -9,7 +10,9 @@
         "start": "NODE_ENV=production node build/server.js",
         "precommit": "lint-staged",
         "format": "prettier --write '**/*.{js,jsx,css,md}'",
-        "lint": "eslint . --cache --fix"
+        "lint": "eslint . --cache --fix",
+        "predeploy": "yarn build",
+        "deploy": "gh-pages -d build"
     },
     "dependencies": {
         "@apollo/client": "^3.2.1",
@@ -47,6 +50,7 @@
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-react": "^7.21.2",
         "eslint-plugin-standard": "^4.0.1",
+        "gh-pages": "^3.1.0",
         "lint-staged": "^10.4.0",
         "prettier": "^2.1.2",
         "razzle": "canary",
