--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
         "eslint-plugin-standard": "^4.0.1",
         "lint-staged": "^10.4.0",
         "prettier": "^2.1.2",
-        "razzle": "canary"
+        "razzle": "canary",
+        "razzle-plugin-scss": "^3.3.4"
     },
     "lint-staged": {
         "*.{js,jsx,css,md}": [
