--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@apollo/react-components": "^4.0.0",
         "@loadable/component": "^5.13.2",
         "@loadable/server": "^5.13.2",
+        "@toast-ui/editor-plugin-code-syntax-highlight": "^1.0.0",
         "@toast-ui/react-editor": "^2.4.0",
         "axios": "^0.20.0",
         "bootstrap": "^4.5.2",
@@ -24,6 +25,7 @@
         "express": "^4.17.1",
         "github-markdown-css": "^4.0.0",
         "graphql": "^15.3.0",
+        "highlight.js": "^10.2.1",
         "isomorphic-unfetch": "^3.1.0",
         "js-cookie": "^2.2.1",
         "marked": "^1.2.0",
